--- a/package.json
+++ b/package.json
@@ -18,7 +18,11 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.10.1",
+    "react-scroll": "^1.9.0",
     "sass": "^1.66.1",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "@types/react-scroll": "^1.8.10"
   }
 }
